--- a/Copy_of_Assignment_1.ipynb
+++ b/Copy_of_Assignment_1.ipynb
@@ -64,10 +64,10 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "a042946a-8a26-4aeb-f983-41773e335b7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a042946a-8a26-4aeb-f983-41773e335b7e"
       },
       "execution_count": 29,
       "outputs": [
@@ -104,10 +104,10 @@
       ],
       "metadata": {
         "id": "_ZHoml3kPqic",
-        "outputId": "9125f8cf-2690-4dd5-a202-9d98355aa1bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9125f8cf-2690-4dd5-a202-9d98355aa1bb"
       },
       "execution_count": 30,
       "outputs": [
@@ -160,10 +160,10 @@
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "c9c828d0-a8b1-4d86-c5f4-5fbf18f28b41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c9c828d0-a8b1-4d86-c5f4-5fbf18f28b41"
       },
       "execution_count": 31,
       "outputs": [
@@ -301,10 +301,10 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "d04ec231-9431-4d32-ed35-7d11637b0a36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d04ec231-9431-4d32-ed35-7d11637b0a36"
       },
       "execution_count": 32,
       "outputs": [
@@ -355,10 +355,10 @@
       ],
       "metadata": {
         "id": "T5OxJRZ8uvR7",
-        "outputId": "be9d9b08-f371-42f5-bf04-315440af7bae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "be9d9b08-f371-42f5-bf04-315440af7bae"
       },
       "execution_count": 33,
       "outputs": [
@@ -408,10 +408,31 @@
         "print(date_generated.strftime(\"%d-%m-%Y\"))"
       ],
       "metadata": {
-        "id": "dgyC0JhVYl4F"
+        "id": "dgyC0JhVYl4F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "22e7fdd8-bec1-45aa-ee24-204ceac939f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['01-01-2022', '02-01-2022', '03-01-2022', '04-01-2022', '05-01-2022',\n",
+            "       '06-01-2022', '07-01-2022', '08-01-2022', '09-01-2022', '10-01-2022',\n",
+            "       '11-01-2022', '12-01-2022', '13-01-2022', '14-01-2022', '15-01-2022',\n",
+            "       '16-01-2022', '17-01-2022', '18-01-2022', '19-01-2022', '20-01-2022',\n",
+            "       '21-01-2022', '22-01-2022', '23-01-2022', '24-01-2022', '25-01-2022',\n",
+            "       '26-01-2022', '27-01-2022', '28-01-2022', '29-01-2022', '30-01-2022',\n",
+            "       '31-01-2022', '01-02-2022', '02-02-2022', '03-02-2022', '04-02-2022',\n",
+            "       '05-02-2022', '06-02-2022', '07-02-2022', '08-02-2022', '09-02-2022',\n",
+            "       '10-02-2022'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -453,10 +474,10 @@
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "558f6dd0-ad33-4cef-8d37-7254c5e52c7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "558f6dd0-ad33-4cef-8d37-7254c5e52c7a"
       },
       "execution_count": 34,
       "outputs": [
